<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.phonereminder.ryutb.phonereminder.control.AppCheckBox
        android:id="@+id/ckReadContact"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:enabled="false"
        android:text="@string/permission_str_permission_read_contact" />

    <com.phonereminder.ryutb.phonereminder.control.AppCheckBox
        android:id="@+id/ckReadPhoneState"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:enabled="false"
        android:text="@string/permission_str_permission_read_phone_state" />

    <com.phonereminder.ryutb.phonereminder.control.AppButton
        android:id="@+id/btnRequestDrawOverlay"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/permission_str_draw_overlay" />
</LinearLayout>