<?xml version="1.0" encoding="utf-8"?>
<com.phonereminder.ryutb.phonereminder.libs.swipe.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:dragEdge="right"
    app:mode="normal">
    <FrameLayout
        android:id="@+id/btnDelete"
        android:layout_width="63dp"
        android:layout_height="match_parent"
        android:background="@color/orange">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <com.phonereminder.ryutb.phonereminder.control.AppTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/str_ic_trash_o"
                android:textColor="@color/default_text_color"
                app:customFont="@string/customFont_FontAwesome" />

            <com.phonereminder.ryutb.phonereminder.control.AppTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/reminder_item_layout_str_delete"
                android:textColor="@color/default_text_color"
                android:textSize="10sp"
                app:customFont="@string/customFont_OpenSans_Semibold" />
        </LinearLayout>
    </FrameLayout>
    <com.phonereminder.ryutb.phonereminder.control.AppTextView
        android:id="@+id/tvName"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</com.phonereminder.ryutb.phonereminder.libs.swipe.SwipeRevealLayout>